--- a/LasHoras/WebContent/index.html
+++ b/LasHoras/WebContent/index.html
@@ -5,8 +5,28 @@
 <title>Insert title here</title>
 </head>
 <body>
+<header>
 <h1>Café Las Horas</h1>
+</header>
+<main>
+<article>
+<header>
 <h2>Comunidad de Café.Gastobar y tapas</h2>
-
+</header>
+<section>
+<p>Cafe Las Horas es una empresa joven e inovadora pero con una larga trayectoria</p>
+<p>Trabaja desde la maxima exigencia y solo con productos de la mas alta calidad</p>
+<p>Creamos experiencias a medida con la alta gastronomia como herramienta y el gusto por la excepcional como norma</p>
+</section>
+</article>
+<article>
+<header>
+<h2>Domingo degustacion de café</h2>
+</header>
+<section>
+<p> Contamos con un equipo eexperimentado y multidisciplinar que cubre todas las necesidades que genera un evento. todos los servicios de decoracion y puesta en escena necesarios</p>
+</section>
+</article>
+</main>
 </body>
 </html>
